【修改】XJ-GN-56723：供应商注册的境外分支机构信息中增加字段所在洲（必填），选择洲后，所在国家中要自动筛选为该洲的国家。【作者】黄习刚